navbar overlap bugfix

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,7 @@ body {
   height: calc(100vh - 50px);
   width: 50%;
   position: fixed;
-  top: 50px;
+  top: 60px;
   overflow: hidden;
 }
 
